--- a/общие.css
+++ b/общие.css
@@ -33841,6 +33841,10 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-sheet-1 {
   min-height: 84px;
 }
+.cont {
+width:=1476;
+margin: 0px auto;
+}
 
 .u-header .u-image-1 {
   margin: 4px auto 0 0;
