--- a/общие.css
+++ b/общие.css
@@ -6,8 +6,8 @@ margin: 5px;
 
 .cont {
 width:=1380px;
-margin: 5px   ;
-padding: 0px
+margin: 0px auto ;
+padding: 10px
 }
 html {
 overflow-x: hidden;
