--- a/общие.css
+++ b/общие.css
@@ -1,12 +1,13 @@
 body {
 overflow-x: hidden;
-margin: 5px;
+margin: 10px;
+padding: 10px 
 }
 
 
 .cont {
-width:=1380px;
-margin: 0px auto ;
+width:=1080px;
+margin: 10px auto ;
 padding: 10px
 }
 html {
