--- a/общие.css
+++ b/общие.css
@@ -1,14 +1,14 @@
 body {
 overflow-x: hidden;
 overflow-y: hidden;
-margin-right: 65%; 
+
 
 }
 
 
 .cont {
-width:=1380px;
-margin: 0px auto ;
+width:=1580px;
+margin: 30px  ;
 
 }
 html {
