--- a/общие.css
+++ b/общие.css
@@ -12,10 +12,10 @@ margin: 30px  ;
 
 }
 html {
-margin: 10px  ; 
+padding: 10px  ; 
 overflow-x: hidden;
 overflow-y: scroll;
-margin: 10px  ;
+
 }
 .fr-clearfix::after {
   clear: both;
