--- a/общие.css
+++ b/общие.css
@@ -1,22 +1,22 @@
-body {
-overflow-x: hidden;
-overflow-y: hidden;
-
-
-}
+/*begin-commonstyles library*//*!
+ * froala_editor v3.2.3 (https://www.froala.com/wysiwyg-editor)
+ * License https://froala.com/wysiwyg-editor/terms/
+ * Copyright 2014-2020 Froala Labs
+ */
 
 
 .cont {
-width:=1300px;
-margin: 0px auto ;
-
+width:=1476;
+margin: 0px auto;
 }
+
 html {
 
 overflow-x: hidden;
 overflow-y: scroll;
 
 }
+
 .fr-clearfix::after {
   clear: both;
   display: block;
@@ -14287,7 +14287,14 @@ section.u-image,
   border: 5px solid #fff;
   border-radius: 100%;
 }
-
+.u-video-poster:after {
+  width: 0;
+  height: 0;
+  margin: -20px 0 0 -10px;
+  border-left: 40px solid #fff;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+}
 .u-background-video .u-video-poster:before,
 .u-background-video .u-video-poster:after {
   display: none;
@@ -14317,19 +14324,51 @@ section.u-image,
   object-fit: contain;
   background-size: contain;
 }
-
+@media (min-width: 1200px) {
+  .u-video.u-video-contain video-xl {
+    object-fit: contain;
+    background-size: contain;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .u-video.u-video-contain video-lg {
+    object-fit: contain;
+    background-size: contain;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .u-video.u-video-contain video-md {
+    object-fit: contain;
+    background-size: contain;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .u-video.u-video-contain video-sm {
+    object-fit: contain;
+    background-size: contain;
+  }
+}
+@media (max-width: 575px) {
+  .u-video.u-video-contain video-xs {
+    object-fit: contain;
+    background-size: contain;
+  }
+}
 div.u-video,
 .u-background-video {
   overflow: hidden;
 }
-
+@media (min-width: 768px) {
+  .u-background-video .embed-responsive {
+    pointer-events: none;
+  }
 }
 .u-metadata {
   display: table;
 }
 .u-metadata .u-meta-icon {
   display: inline-block;
-  margin-left: 0px;
+  margin-left: 5px;
   vertical-align: middle;
 }
 .u-metadata .u-meta-icon:first-child {
@@ -17443,7 +17482,23 @@ blockquote .small:before {
 .pswp__button--arrow--right {
   right: 0;
 }
-
+.pswp__button--arrow--left:before,
+.pswp__button--arrow--right:before {
+  content: '';
+  top: 35px;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 30px;
+  width: 32px;
+  position: absolute;
+}
+.pswp__button--arrow--left:before {
+  left: 6px;
+  background-position: -138px -44px;
+}
+.pswp__button--arrow--right:before {
+  right: 6px;
+  background-position: -94px -44px;
+}
 /*
 
 	2. Share modal/popup and links
@@ -18384,7 +18439,11 @@ a.pswp__share--download:hover {
 .u-layout-horizontal .u-gallery-item:last-child {
   margin-right: 0 !important;
 }
-
+.u-layout-horizontal .u-back-slide {
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: fit-content;
+}
 .u-layout-horizontal .u-back-image {
   width: auto;
 }
@@ -18486,7 +18545,19 @@ a.pswp__share--download:hover {
   width: 100%;
   height: 100%;
 }
-
+.u-shopping-cart-count {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(50%, -50%);
+  z-index: 1;
+  width: calc(1em + 3px);
+  height: calc(1em + 3px);
+  line-height: calc(1em + 2px);
+  text-align: center;
+  vertical-align: baseline;
+  box-sizing: content-box;
+}
 .u-cart-product-image {
   width: 100px;
   display: inline-block;
@@ -33853,4 +33924,55 @@ a.u-link.u-text-hover-grey-90:hover {
  .nb {
 	color: #ffffff;
 	}
-  
+ 
+
+
+ body {
+  height: 100vh;
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  overflow: hidden;
+  filter: drop-shadow(0 0 10px white);
+}
+
+@function random_range($min, $max) {
+  $rand: random();
+  $random_range: $min + floor($rand * (($max - $min) + 1));
+  @return $random_range;
+}
+
+.snow {
+  $total: 200;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: white;
+  border-radius: 50%;
+
+  @for $i from 1 through $total {
+    $random-x: random(1000000) * 0.0001vw;
+    $random-offset: random_range(-100000, 100000) * 0.0001vw;
+    $random-x-end: $random-x + $random-offset;
+    $random-x-end-yoyo: $random-x + ($random-offset / 2);
+    $random-yoyo-time: random_range(30000, 80000) / 100000;
+    $random-yoyo-y: $random-yoyo-time * 100vh;
+    $random-scale: random(10000) * 0.0001;
+    $fall-duration: random_range(10, 30) * 1s;
+    $fall-delay: random(30) * -1s;
+
+    &:nth-child(#{$i}) {
+      opacity: random(10000) * 0.0001;
+      transform: translate($random-x, -10px) scale($random-scale);
+      animation: fall-#{$i} $fall-duration $fall-delay linear infinite;
+    }
+
+    @keyframes fall-#{$i} {
+      #{percentage($random-yoyo-time)} {
+        transform: translate($random-x-end, $random-yoyo-y) scale($random-scale);
+      }
+
+      to {
+        transform: translate($random-x-end-yoyo, 100vh) scale($random-scale);
+      }
+    }
+  }
+} 
