--- a/общие.css
+++ b/общие.css
@@ -6,9 +6,19 @@
 
 
 .cont {
-width:=1476;
+width:=1476px;
+height: 3000px;
 margin: 0px auto;
 }
+
+body {
+overflow-x: hidden;
+overflow-y: hidden;
+
+
+}
+
+
 
 html {
 
