--- a/общие.css
+++ b/общие.css
@@ -1,9 +1,10 @@
 body {
-  background: url(fon.jpg) no-repeat; /* Задаём фон GIF-картинкой */
+background: url(fon.jpg) no-repeat; /* Задаём фон GIF-картинкой */
 background-position: center center;      
 background-attachment: fixed;    
  background-size: cover;  
- background-color: #583f79; }
+background-color: #583f79; }
+background-size: 100%;
 
 
 
